      can now be used to draw contours or a color image showing the activities of
      the predominant species.

      \item Use standard abbreviations for hematite (Hem) and magnetite (Mag) in
      OBIGT/Berman_cr.csv.

      \item Revise multi-metal.Rmd: Improve mineral abbreviations and placement
      of labels; use updated DFT energies from Materials Project; add Mosaic
      Stacking 2 (minerals and aqueous species); add \emph{K}\S{eff} calculation
      (\href{https://doi.org/10.1016/j.gca.2021.01.038}{Robinson et al., 2021}).

      \item Restore \samp{lty.aq} and \samp{lty.cr} arguments to
      \code{diagram()} to control plotting of aq-aq and cr-cr field boundaries.

      \item Add \samp{demo/pourbaix.R} (Eh-pH diagrams with equisolubility
      lines, after \href{https://www.worldcat.org/oclc/563921897}{Pourbaix,
      1974}).

    }
  }

}

\section{Changes in CHNOSZ version 1.4.0 (2020-11-11)}{

  \subsection{MAJOR CHANGES}{
    \itemize{

      \item An \strong{add} argument has been added to \code{species()}.
      \emph{With the default of \code{add = FALSE}, loading new species now
        causes any existing species definition to be \strong{deleted}.} To add
      species to an existing system, use \samp{add = TRUE}. With this change,
      scripts can be made more concise because \code{species(delete =
        TRUE)} is no longer needed to clear the species definition in a series
      of calculations for different systems. 

      \item The naming convention for methane has changed. The name
      \strong{methane} now applies exclusively to the gas; the formula
      \strong{CH4} without a state continues to represent the aqueous species.
      This behavior is consistent with inorganic gases but differs from most
      organic substances, where the name refers to the aqueous species. This
      change was made because in the past there was no way to use \code{info()}