@@ -318,7 +318,7 @@
   title     = {{P}hase relations among silicates, copper iron sulfides, and aqueous solutions at magmatic temperatures},
   year      = {1985},
   number    = {7},
-  pages     = {1965 -- 1973},
+  pages     = {1965--1973},
   volume    = {80},
   doi       = {10.2113/gsecongeo.80.7.1965},
 }
@@ -932,4 +932,14 @@
   year      = {2021},
   volume    = {in press},
   doi       = {10.1016/j.gca.2021.01.038},
+}
+
+@Book{Pou74,
+  author    = {Pourbaix, M.},
+  publisher = {National Association of Corrosion Engineers and CEBELCOR},
+  title     = {{A}tlas of {E}lectrochemical {E}quilibria in {A}queous {S}olutions},
+  year      = {1974},
+  address   = {Houston, Texas and Brussels},
+  edition   = {2nd},
+  url       = {https://www.worldcat.org/oclc/563921897},
 }
